# TDD-Assignment

./: AESEncryption.cpp  AESEncryption.hpp  CMakeLists.txt  FileManager.cpp  FileManager.hpp  README.md  RSAEncryption.cpp  RSAEncryption.hpp  main.cpp  tests.cc
dependencies/: CMakeLists.txt
dependencies/openssl-cmake/: CMakeLists.txt
folder_with_files/: file2.txt
